client/foodcross/components/Navbar/Navbar.module.css
.navbar {
    background: white;
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.5rem;
    position: sticky;
    z-index: 999;
    width: 100%;
    margin-top: 10px; 
  }
  
  .navbarContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80px;
    max-width: 1500px;
    color: black;
  }
  
  .navbarLogo {
    color: rgb(0, 0, 0);
    justify-self: start;
    margin-left: 20px;
    cursor: pointer;
    text-decoration: none;
    font-size: 2rem;
    display: flex;
    align-items: center;
    margin-bottom: 8px;
    margin-right: 3rem;
  }
  
  .fa-typo3 {
    margin-left: 0.5rem;
    font-size: 1.8rem;
  }
  
  .navMenu {
    display: grid;
    grid-template-columns: repeat(4, auto);
    grid-gap: 10px;
    list-style: none;
    text-align: center;
    width: 60vw;
    justify-content: end;
    margin-right: 2rem;
  }
  
  .navItem {
    height: 40px;
  }
  
  .navLinks {
    color: rgb(0, 0, 0);
    display: flex;
    align-items: center;
    text-decoration: none;
    padding: 0.5rem 2rem;
    height: 100%;
  }
  
  .navLinks:hover {
    border-bottom: 5px solid #fff;
    transition: all 0.3s ease-out;
  }
  
  .fa-bars {
    color: rgb(0, 0, 0);
  }
  
  .nav-links-mobile {
    display: none;
  }
  
  .menuIcon {
    display: none;
  }

  .profileIcon {
    color:rgb(0, 0, 0);
    font-size: 1.8rem;
  }
  
  @media screen and (max-width: 960px) {
    .NavbarItems {
      position: relative;
      margin-bottom: 3%;
    }
  
    .navMenu {
      display: flex;
      flex-direction: column;
      width: 100%;
      height: 90vh;
      position: absolute;
      top: 80px;
      left: -100%;
      opacity: 1;
      transition: all 0.5s ease;
    }
  
    .navMenuActive {
      background: #242222;
      left: 0;
      opacity: 1;
      transition: all 0.5s ease;
      z-index: 1;
    }
  
    .navLinks {
      text-align: center;
      padding: 2rem;
      width: 100%;
      display: table;
    }
  
    .navLinks:hover {
      background-color: #fff;
      color: #242424;
      border-radius: 0;
    }
  
    .navbarLogo {
      position: absolute;
      top: 0;
      left: 0;
      transform: translate(25%, 50%);
    }
  
    .menuIcon {
      display: block;
      position: absolute;
      top: 0;
      right: 0;
      transform: translate(-100%, 60%);
      font-size: 1.8rem;
      cursor: pointer;
    }
  
    .fa-times {
      color: rgb(0, 0, 0);
      font-size: 2rem;
    }
  
    .nav-links-mobile {
      display: block;
      text-align: center;
      margin: 2rem auto;
      border-radius: 4px;
      width: 80%;
      text-decoration: none;
      font-size: 1.5rem;
      background-color: transparent;
      color: #fff;
      padding: 14px 20px;
      border: 1px solid #fff;
      transition: all 0.3s ease-out;
    }
  
    .nav-links-mobile:hover {
      background: #fff;
      color: #242424;
      transition: 250ms;
    }
  }
  

